--- a/adventofcode.cabal
+++ b/adventofcode.cabal
@@ -17,3 +17,4 @@ executable adventofcode
   main-is:             Main.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
+                     , trifecta >= 1.5 && < 1.6
